Reworking the base website

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,11 +1,7 @@
-/*! purgecss start ignore */
-@import 'tailwindcss/base';
-/*! purgecss end ignore */
 
-@import 'components/resets';
 
-@import 'tailwindcss/components';
+@import "markdown.css";
 
-@import 'components/markdown';
-
-@import 'tailwindcss/utilities';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
